--- a/assets/styles/bio.css
+++ b/assets/styles/bio.css
@@ -1,11 +1,13 @@
 .self-pic{
   border-radius: 50%;
-  max-width: 180px;
-  margin-bottom: 50px;
+  max-width: 250px;
 }
 
-.bio-container{
-
+.page-title{
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  align-self: center;
 }
 
 .bio{
@@ -17,7 +19,7 @@
 
   .self-pic{
     border-radius: 50%;
-    max-width: 200px;
+    max-width: 350px;
   }
 
 }
@@ -26,7 +28,7 @@
 
   .self-pic{
     border-radius: 50%;
-    max-width: 250px;
+    max-width: 450px;
   }
 
 }
@@ -35,7 +37,7 @@
 
   .self-pic{
     border-radius: 50%;
-    max-width: 300px;
+    max-width: 450px;
   }
 
 }
@@ -44,7 +46,7 @@
 
   .self-pic{
     border-radius: 50%;
-    max-width: 400px;
+    max-width: 450px;
   }
 
 }
